@@ -1,3 +1,15 @@
+2021-06-09  Fujii Hironori  <Hironori.Fujii@sony.com>
+
+        clang-cl: JIT.h(966,67): error: no viable conversion from 'JSC::AbstractMacroAssembler<JSC::X86Assembler>::Address' to 'FunctionPtr<CFunctionPtrTag>'
+        https://bugs.webkit.org/show_bug.cgi?id=226850
+
+        Reviewed by Yusuke Suzuki.
+
+        WinCairo clang-cl builds got broken since r278656 (Bug 226072).
+
+        * jit/JIT.h: Use the common callOperation(Address, Args...) for
+        x64 Windows. Added static_assert to check the return type.
+
 2021-06-09  Mark Lam  <mark.lam@apple.com>
 
         Speculative build fix for Win32.
